interpreter/grammar.txt
# Block - encompasses the program, series of statements
block: (statement '\n')*

# Statement - a line of code that can be evaluated
statement: comment | id | assign | block | fn_decl | if | while | expr
comment: '#' @until '\n'
id: @str
assign: id '=' literal
fn_decl: id '(' (id ',')* id ')' '=>' block
if: 'if' expr block
while: 'while' expr block

# Expression - a section of code that computes to something
expr: term | '(' expr ')' | unary | binary | ternary | special
unary: ('+' | '-' | '!') expr
special: expr '!'
binary: expr op expr
op: (('^') > ('%') > ('*' | '/') > ('+' | '-') > ('&' | '|') > ('<=' | '>=' | '<' | '>' | '==' | '!=') > ('&&') > ('||'))

term: literal | id | fn_call
literal: @num | @bool | '"' @str '"' | matrix
matrix: '[' (row ';')* row ']'
row: ((expr (',' | '\s'))* expr (',' | '\s'))
fn_call: id '(' (expr ',')* ')'
ternary: expr '?' expr ':' expr
